resources/css/style.css
html {
  font-size: 18px;
  line-height: 1.4;
  font-family: Helvetica;
  background-color: white;
}

body {
  background-image: url("../images/glasses-bg.png");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  height: 30rem;
}

.container {
  width: 960px;
  display: flex;
  margin: 0 auto;
}

header {
  margin-top: 1rem;
  background-color: cadetblue;
  color: white;
  display: flex;
  align-items: center;
  position: fixed;
  width: 960px;
  z-index: 5;
}

header img {
  height: 1.5rem;
  width: auto;
  padding: 0.75rem 1rem 0.75rem 2rem;
}

header p {
  font-size: 1rem;
}

nav {
  position: absolute;
  right: 0;
}

nav .mobile-nav {
  display: none;
}

header a {
  font-size: 1rem;
  padding: 1rem 1rem;
}

.main-banner {
  width: 1032px;
  display: flex;
  position: relative;
  top: 10rem;
  justify-content: flex-end;
  margin: 0 auto;
}

.main-banner .textbox {
  background-color: white;
  padding: 1.5rem 5rem;
  display: flex;
  justify-content: center;
}

.main-banner h1 {
  color: black;
  font-weight: bold;
  font-size: 2rem;
  text-transform: uppercase;
  line-height: 1.2;
}

.content {
  position: absolute;
  top: 30rem;
}

.service-list,
.philosophy-appointments {
  display: flex;
  justify-content: center;
}

.service {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 8rem;
  width: 5rem;
  padding: 3rem 3rem;
  text-align: center;
}

.service img {
  max-width: 5rem;
  height: auto;
  position: relative;
  top: 0;
  padding-bottom: 3.5px;
  display: flex;
  text-align: center;        /* Paper image won't center */
}

.vertical {
  width: 3.5rem;
}

.philosophy,
.appointments {
  width: 35%;

}

.philosophy h2,
.appointments h2 {
  background-color: cadetblue;
  color: white;
  font-weight: bold;
  text-transform: uppercase;
  width: 10rem;
  padding: 0.5rem 1.25rem;
}

.philosophy p,
.appointments p {
  padding-top: 1rem;
  padding-bottom: 5rem;
}

.philosophy {
  padding-right: 5%;
}

footer {
  background-color: azure;
  display: flex;
  flex-direction: row;
  align-items: center;
}

footer img {
  padding: 4rem 1rem 4rem 4rem;
  height: 1.5rem;
}

@media only screen and (max-width: 1032px) {
  header {
    margin-top: 0;
    width: 100%;
  }

  body {
    height: 20rem;
  }

  .content {
    position: absolute;
    top: 20rem;
  }

  .main-banner .textbox {
    top: 5rem;
    padding: 0.75rem 4rem;
    position: absolute;         /* Not moving with screen stretch */
    right: 2rem;
  }

  .main-banner h1 {
    font-size: 1.33rem;
  }
}

@media only screen and (max-width: 600px) {
  body {
    height: 17rem;
    background-position: 20%;
  }

  header p {
    display: none;
  }

  nav .largescreen-nav {
    display: none;
  }

  nav .mobile-nav {
    display: flex;
  }

  .main-banner .textbox {         /* Text off screen on right */
    width: 100%;
    top: 4rem;
    padding: 1rem 0;
    font-size: 1rem;
    justify-content: center;
  }

  .content {
    position: absolute;
    top: 17rem;
  }

  .service-list,
  .philosophy-appointments {
    display: flex;
    flex-direction: column;
  }

  .service-list {
    padding: 3.77rem 0;
    margin: auto;
  }

  .service {
    padding-top: 1.54rem;
  }

  .service p {
    font-size: 0.77rem;
  }

  .philosophy,
  .appointments {
    width: 100%;
    padding-top: 1rem;
    padding-bottom: 4rem;
  }

  .philosophy h2,
  .appointments h2 {
    width: 100%;
    display: flex;
    justify-content: center;      /* Looks shifted right of center */
  }

  .philosophy p,
  .appointments p {
    font-size: 0.77rem;
  }

  footer img {
    margin: auto;
  }

  footer p {
    display: none;          /* Image not aligned center */
  }
}

